@@ -2,6 +2,10 @@ Developers
 ----------
 * Graeme Gott
 
+Translators
+-----------
+* Isratine Citizen (he)
+
 Icons
 -----
 * Oxygen, http://www.oxygen-icons.org/
